--- a/app/views/users/settings_partials/_color_swatches.html.erb
+++ b/app/views/users/settings_partials/_color_swatches.html.erb
@@ -1,16 +1,16 @@
 <style>
-  #color-swatches {
+  .color-swatches {
     width:100%;
     margin: 2vw 0 0 0;
   }
-  #color-swatches span.swatch {
+  .color-swatches span.swatch {
     width:4.55vw;
     height:4.55vw;
     display:inline-block;
   }  
 </style>
 
-<div id="color-swatches">
+<div class="color-swatches">
   <span class="swatch" style="background-color:#FFED78;" value="#FFED78"></span>
   <span class="swatch" style="background-color:#C8E64C;" value="#C8E64C"></span>
   <span class="swatch" style="background-color:#8CD446;" value="#8CD446"></span>
