why wont this work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -153,10 +153,14 @@
       $('#new-category').modal('toggle');
 
     });
+
+
+    /* start scrolled */
+    // window.scrollTo(0,450);
+
+
   });
-  
-
-
+ 
 
 
 </script>
