--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <script type="text/javascript">
     // Load the Visualization API library and the piechart library.
     google.load('visualization', '1', {'packages':['corechart']});
-    google.setOnLoadCallback(drawChart);
+    // google.setOnLoadCallback(drawChart);
   </script>
 
 
@@ -44,7 +44,7 @@
   <script>
     $(document).ready(function(){
       //Anything go in here?
-
+      window.scrollTo(0,450);
     });
 
     
