--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -155,12 +155,23 @@
     });
 
 
-    /* start scrolled */
-    window.scrollTo(0,450);
+    /* start scrolled depending on current time */
+    setScrollStart();
 
 
   });
- 
+
+  function setScrollStart(){
+    var timeNow = new Date().getHours();
+
+    if (timeNow > 7) {
+      window.scrollTo(0, 0);
+    } else if (timeNow > 15) {
+      window.scrollTo(0, 400);
+    } else {
+      window.scrollTo(0, 800);
+    }
+  }
 
 
 </script>
