--- a/app/views/users/analysis_partials/charts/_columnchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_columnchart.html.erb
@@ -89,7 +89,7 @@
         var indexToInsertAt; 
 
         if (chartDataArray) { //not sure why we need this
-          indexToInsertAt = chartDataArray.length + 1;
+          indexToInsertAt = chartDataArray.length;
           chartDataArray.splice(indexToInsertAt, 0, categoryHrsOnDays[item]);  
         }    
         i ++
@@ -109,5 +109,23 @@
     return dayNameArray[day];
   }
 
-
+// var a = [
+// ["Category", {role: "annotation"}, "Social", "Music"], 
+// ["Sun", "", 0, 0], 
+// ["Mon", "", 0, 0], 
+// ["Tue", "", 0, 0], 
+// ["Wed", "", 0, 0], 
+// ["Thu", "", 0, 0], 
+// ["Fri", "", 0, 0], 
+// ["Sat", "", 0, 0]]
 </script>
+
+
+
+
+
+
+
+
+
+
