--- a/app/views/users/analysis_partials/charts/_columnchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_columnchart.html.erb
@@ -40,14 +40,14 @@
       // }
 
       var categoryHrsOnDays = {
-        name: cat, 
-        Saturday: 0, 
-        Sunday: 0,
-        Monday: 0,
-        Tuesday: 0,
-        Wednesday: 0,
-        Thurday: 0,
-        Friday: 0
+        'name': cat, 
+        'Saturday': 0, 
+        'Sunday': 0,
+        'Monday': 0,
+        'Tuesday': 0,
+        'Wednesday': 0,
+        'Thurday': 0,
+        'Friday': 0
         // TODO: I have no idea why the hash must be arranged as such. But without it like this, all the entry dates are shifted back one day. If I increase the index number, errors occur. This fixes it.
       },
       categoryEntries = dataHash[cat]['entries'],
@@ -89,7 +89,7 @@
         var indexToInsertAt; 
 
         if (chartDataArray) { //not sure why we need this
-          indexToInsertAt = chartDataArray.length;
+          indexToInsertAt = chartDataArray.length + 1;
           chartDataArray.splice(indexToInsertAt, 0, categoryHrsOnDays[item]);  
         }    
         i ++
@@ -109,7 +109,7 @@
     return dayNameArray[day];
   }
 
-// var a = [
+// var a = [ //
 // ["Category", {role: "annotation"}, "Social", "Music"], 
 // ["Sun", "", 0, 0], 
 // ["Mon", "", 0, 0], 
@@ -117,7 +117,19 @@
 // ["Wed", "", 0, 0], 
 // ["Thu", "", 0, 0], 
 // ["Fri", "", 0, 0], 
-// ["Sat", "", 0, 0]]
+// ["Sat", "", 0, 0]
+// ]
+
+// var b = [ //
+// ["Category", {role: "annotation"}, "Social", "Music"], 
+// ["Sun", "", 0, 0], 
+// ["Mon", "", 0, 0], 
+// ["Tue", "", 0, 0], 
+// ["Wed", "", 0, 0], 
+// ["Thu", "", 0, 0], 
+// ["Fri", "", 0, 0], 
+// ["Sat", "", 0, 0]
+// ]
 </script>
 
 
