NEW ENTRY: time inputs now increment 30 mins ||| time inputs default to an hour

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -211,6 +211,8 @@
     var date = formatDate( new Date() ),
         datesCatsAndEntries = getDatesCatsAndEntries(date);
 
+        // debugger
+
 
   }
 
