creating function to create time slots on timeline

--- a/app/views/home/_timeline.html.erb
+++ b/app/views/home/_timeline.html.erb
@@ -7,53 +7,148 @@
     border:0.1em solid darkgrey;
     text-align:center;
   }
+  .half-hour {
+    width:100%;
+    height:50%;
+  }
+  .half-hour h6 {
+    display:inline;
+  }
+  .hour .half-hour:nth-child(1) {
+    background-color:red;
+  }
+  .hour .half-hour:nth-child(2) {
+    background-color:green;
+  }
 </style>
 
-<div class="hour" id="hr-00">0:00</div>
+<div class="hour" id="hr-00">
+  <h6>0:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-01">1:00</div>
+<div class="hour" id="hr-01">
+  <h6>1:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-02">2:00</div>
+<div class="hour" id="hr-02">
+  <h6>2:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-03">3:00</div>
+<div class="hour" id="hr-03">
+  <h6>3:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-04">4:00</div>
+<div class="hour" id="hr-04">
+  <h6>4:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-05">5:00</div>
+<div class="hour" id="hr-05">
+  <h6>5:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-06">6:00</div>
+<div class="hour" id="hr-06">
+  <h6>6:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-07">7:00</div>
+<div class="hour" id="hr-07">
+  <h6>7:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-08">8:00</div>
+<div class="hour" id="hr-08">
+  <h6>8:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-09">9:00</div>
+<div class="hour" id="hr-09">
+  <h6>9:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-10">10:00</div>
+<div class="hour" id="hr-10">
+  <h6>10:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-11">11:00</div>
+<div class="hour" id="hr-11">
+  <h6>11:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-12">12:00</div>
+<div class="hour" id="hr-12">
+  <h6>12:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-13">13:00</div>
+<div class="hour" id="hr-13">
+  <h6>13:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-14">14:00</div>
+<div class="hour" id="hr-14">
+  <h6>14:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-15">15:00</div>
+<div class="hour" id="hr-15">
+  <h6>15:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-16">16:00</div>
+<div class="hour" id="hr-16">
+  <h6>16:00</h6>
+  <div class="half-hour"></div>
+  <div class="half-hour"></div>
+</div>
 
-<div class="hour" id="hr-17">17:00</div>
+<div class="hour" id="hr-17">
+  <h6>17:00</h6>
+</div>
 
-<div class="hour" id="hr-18">18:00</div>
+<div class="hour" id="hr-18">
+  <h6>18:00</h6>
+</div>
 
-<div class="hour" id="hr-19">19:00</div>
+<div class="hour" id="hr-19">
+  <h6>19:00</h6>
+</div>
 
-<div class="hour" id="hr-20">20:00</div>
+<div class="hour" id="hr-20">
+  <h6>20:00</h6>
+</div>
 
-<div class="hour" id="hr-21">21:00</div>
+<div class="hour" id="hr-21">
+  <h6>21:00</h6>
+</div>
 
-<div class="hour" id="hr-22">22:00</div>
+<div class="hour" id="hr-22">
+  <h6>22:00</h6>
+</div>
 
-<div class="hour" id="hr-23">23:00</div>
+<div class="hour" id="hr-23">
+  <h6>23:00</h6>
+</div>
 
