TIMELINE: time slot function started. skeleton and plan made

--- a/app/views/home/_timeline.html.erb
+++ b/app/views/home/_timeline.html.erb
@@ -15,140 +15,178 @@
     display:inline;
   }
   .hour .half-hour:nth-child(1) {
-    background-color:red;
+/*    background-color:red;*/
   }
   .hour .half-hour:nth-child(2) {
-    background-color:green;
+   /* background-color:green;*/
   }
 </style>
 
 <div class="hour" id="hr-00">
-  <h6>0:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>00:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-01">
-  <h6>1:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>01:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-02">
-  <h6>2:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>02:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-03">
-  <h6>3:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>03:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-04">
-  <h6>4:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>04:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-05">
-  <h6>5:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>05:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-06">
-  <h6>6:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>06:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-07">
-  <h6>7:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>07:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-08">
-  <h6>8:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>08:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-09">
-  <h6>9:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>09:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-10">
-  <h6>10:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>10:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-11">
-  <h6>11:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>11:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-12">
-  <h6>12:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>12:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-13">
-  <h6>13:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>13:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-14">
-  <h6>14:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>14:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-15">
-  <h6>15:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>15:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-16">
-  <h6>16:00</h6>
-  <div class="half-hour"></div>
+  <div class="half-hour">
+    <h6>16:00</h6>
+  </div>
   <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-17">
-  <h6>17:00</h6>
+  <div class="half-hour">
+    <h6>17:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-18">
-  <h6>18:00</h6>
+  <div class="half-hour">
+    <h6>18:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-19">
-  <h6>19:00</h6>
+  <div class="half-hour">
+    <h6>19:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-20">
-  <h6>20:00</h6>
+  <div class="half-hour">
+    <h6>20:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-21">
-  <h6>21:00</h6>
+  <div class="half-hour">
+    <h6>21:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-22">
-  <h6>22:00</h6>
+  <div class="half-hour">
+    <h6>22:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
 <div class="hour" id="hr-23">
-  <h6>23:00</h6>
+  <div class="half-hour">
+    <h6>23:00</h6>
+  </div>
+  <div class="half-hour"></div>
 </div>
 
